<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity.ViewActivityEditRegimen">

    <ScrollView
        android:id="@+id/editRegimenScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/editRegimenLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/editRegimenBottomNav"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/editRegimenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="8dp"
                android:textSize="34sp"
                android:text="EDIT REGIMEN"/>

            <TextView
                android:id="@+id/goalTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/editRegimenTitle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:text="GOAL TYPE"/>

            <ToggleButton
                android:id="@+id/loseToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/goalTypeText"
                app:layout_constraintRight_toLeftOf="@id/maintainToggle"
                android:textOff="Lose"
                android:textOn="Lose" />

            <ToggleButton
                android:id="@+id/maintainToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/goalTypeText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textOff="Maintain"
                android:textOn="Maintain" />

            <ToggleButton
                android:id="@+id/gainToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/goalTypeText"
                app:layout_constraintLeft_toRightOf="@id/maintainToggle"
                android:textOff="Gain"
                android:textOn="Gain" />

            <TextView
                android:id="@+id/activityLevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/maintainToggle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:text="ACTIVITY LEVEL"/>

            <LinearLayout
                android:id="@+id/activityToggles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/activityLevelText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ToggleButton
                    android:id="@+id/sedentaryToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Sedentary"
                    android:textOn="Sedentary"/>

                <ToggleButton
                    android:id="@+id/activeToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Active"
                    android:textOn="Active" />
            </LinearLayout>

            <TextView
                android:id="@+id/weeklyGoalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/activityToggles"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                android:text="WEEKLEY GOAL"/>

            <LinearLayout
                android:id="@+id/weeklyGoalLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/weeklyGoalText"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="8dp"
                android:textSize="18sp">

                <TextView
                    android:id="@+id/weightGoalPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textSize="18sp"
                    android:text="Lose"/>

                <EditText
                    android:id="@+id/weightGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType = "number"
                    android:layout_margin="2dp"
                    android:textSize="18sp"
                    android:hint="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textSize="18sp"
                    android:text="Lbs"/>
            </LinearLayout>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/createRegimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/weeklyGoalLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="CREATE"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>