<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:windowSoftInputMode="adjustPan">

    <ScrollView
        android:id="@+id/scrollDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="16dp"
                android:textSize="34dp"
                android:text="EDIT PROFILE"/>

            <ImageView
                android:id="@+id/editProfilePhoto"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:layout_constraintTop_toBottomOf="@id/editProfileTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_account_circle_black_24dp"/>


            <LinearLayout
                android:id="@+id/editProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfilePhoto"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="Name:"/>
                <EditText
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editProfileBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Birthday:"/>
                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="date"
                    android:focusable="false"
                    android:hint="Set Birthday"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editProfileHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileBirthday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Height:"/>
                <Spinner
                    android:id="@+id/userHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Height"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editProfileWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileHeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weight (Lbs):"/>
                <Spinner
                    android:id="@+id/userWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Weight"/>
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:id="@+id/editProfileCity"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                app:layout_constraintTop_toBottomOf="@id/editProfileWeight"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                android:layout_margin="8dp">-->
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="City: "/>-->
<!--                <Spinner-->
<!--                    android:id="@+id/userCity"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="Select Country"/>-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/editProfileSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/editProfileWeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sex:"/>
                <Spinner
                    android:id="@+id/userSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/editProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/editProfileSex"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="8dp">
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/userProfileEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="UPDATE INFO" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>