...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="LOGIN"/>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/welcomeSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeLoginButton"
            app:layout_constraintRight_toRightOf="parent"
...
